[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/Mole.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/mole2.png" type="Texture" id=2]
[ext_resource path="res://components/AI.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://components/Movement.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sprites/moleUnderground.png" type="Texture" id=6]
[ext_resource path="res://components/RoomVisibility.tscn" type="PackedScene" id=7]
[ext_resource path="res://components/Loot.tscn" type="PackedScene" id=8]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 13.0
height = 0.0

[node name="Mole" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )

[node name="UndergroundSprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
texture = ExtResource( 6 )

[node name="Health" parent="." instance=ExtResource( 4 )]
max_health = 70.0

[node name="CollisionShape2D" parent="Health/DamageArea" index="0"]
position = Vector2( 0, -6 )
shape = SubResource( 2 )

[node name="Bar" parent="Health" index="1"]
margin_top = -34.0
margin_bottom = -30.0

[node name="Movement" parent="." instance=ExtResource( 5 )]

[node name="AI" parent="." instance=ExtResource( 3 )]

[node name="RoomVisibility" parent="." instance=ExtResource( 7 )]

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="DigTimer" type="Timer" parent="."]
one_shot = true

[node name="SurfaceTimer" type="Timer" parent="."]
one_shot = true

[node name="Loot" parent="." instance=ExtResource( 8 )]
drop_parts = [ 1, 6 ]
drop_chance = [ 30, 50 ]

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="DigTimer" to="." method="_on_DigTimer_timeout"]
[connection signal="timeout" from="SurfaceTimer" to="." method="_on_SurfaceTimer_timeout"]

[editable path="Health"]
